--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4"
